# algorytmy-macierzowe

./: .gitignore  alphatensor_equations.txt
lab1/: CMakeLists.txt  gen_plots.py  results.csv
lab1/include/: multiply_alpha_tensor.hpp  multiply_binet.hpp  multiply_strassen.hpp
lab1/src/: main.cpp  multiply_alpha_tensor.cpp  multiply_binet.cpp  multiply_strassen.cpp
lab1/test/: CMakeLists.txt  test_alpha_tensor.cpp  test_binet.cpp  test_strassen.cpp
lab2/: Makefile  binet.hpp  detailed_multiplication_analysis.csv  gauss_benchmark.csv  genplots.py  inversion_benchmark.csv  lu_benchmark.csv  main.cpp  matrix_benchmark.csv
lab3/: CMakeLists.txt  convert_to_ppm.py  original.ppm  plot_results.py  results.csv  singular_values.csv  singular_values_plots.py
lab3/include/: bitmap_utils.hpp  compress.hpp  covariance_mat_prod.hpp  partial_svd.hpp
lab3/src/: bitmap_utils.cpp  compress.cpp  main.cpp  partial_svd.cpp
lab4/: plot_complexity.py  results_task4.csv
lab4/src/: main.cpp
